--- a/PharmacyMap/app/build.gradle
+++ b/PharmacyMap/app/build.gradle
@@ -6,10 +6,12 @@ android {
 
     defaultConfig {
         applicationId "edu.pace.cs6392016.team4.pharmacymap"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -25,4 +27,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.google.android.gms:play-services:9.2.0'
+    compile 'com.android.support:support-v4:24.0.0'
 }
