--- a/PharmacyMap/app/build.gradle
+++ b/PharmacyMap/app/build.gradle
@@ -22,10 +22,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.google.android.gms:play-services:9.2.0'
     compile 'com.android.support:support-v4:24.0.0'
+    compile 'org.apache.commons:commons-csv:1.4'
 }
